<resources>
    <string name="app_name">PopWatch</string>

    <string name="date_format">M/d/y</string>

    <!-- Empty movie grid -->
    <string name="no_movies_to_show">No movies to show.</string>

    <!-- Action menus -->
    <string name="action_refresh">Refresh</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="action_sort_title">Sort By</string>
    <string name="action_fav_title">Mark as Favourite</string>

    <!-- Strings related to Settings -->
    <string name="pref_cat_feed_label">Movie Feed</string>
    <string name="pref_cat_feed">feed</string>

    <string name="pref_sort_label">Sort By</string>
    <string name="pref_sort_key" translatable="false">sort</string>
    <string name="pref_sort_popular_label">Popular</string>
    <string name="pref_sort_popular" translatable="false">popular</string>
    <string name="pref_sort_top_label">Top Rated</string>
    <string name="pref_sort_top" translatable="false">top</string>
    <string name="pref_sort_fav_label">Favorites</string>
    <string name="pref_sort_fav" translatable="false">fav</string>

    <!-- Movie details -->
    <string name="movie_detail_label">Movie Details</string>
    <string name="trailer_button">Watch Trailer</string>

    <!-- Constants needed in XML, not translateable UI strings -->
    <string name="content_authority" translatable="false">com.redbassett.popwatch</string>
    <string name="sync_account_type" translatable="false">popwatch.redbassett.com</string>

    <!-- Share action -->
    <string name="action_share">Share</string>
    <string name="share_text_video">Check out this trailer for %1$s: %2$s</string>
    <string name="share_text_no_video">Check out %1$s on PopWatch!</string>
</resources>
