<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:popwatch="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_sort"
        android:icon="@drawable/ic_sort_white_24dp"
        android:title="@string/action_sort_title"
        popwatch:showAsAction="always">
        <menu>
            <item android:id="@+id/action_sort_popular"
                android:title="@string/pref_sort_popular_label" />
            <item android:id="@+id/action_sort_top"
                android:title="@string/pref_sort_top_label" />
            <item android:id="@+id/action_sort_fav"
                android:title="@string/pref_sort_fav_label" />
        </menu>
    </item>
    <item android:id="@+id/action_refresh"
        android:title="@string/action_refresh"
        popwatch:showAsAction="always" />
</menu>
